Name: Relex
Version: 0.0.1
Synopsis: Relex output analysis
License: BSD3
Author: Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Maintainer: Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Build-Depends: base
Cabal-Version: >=0.12
build-type: Simple

executable relex-viz
    main-is: Relex.hs
    hs-source-dirs: src
    ghc-options: -Wall -O2
    ghc-prof-options: -prof -auto-all
    build-depends: hxt,graphviz, parsec, fgl, MissingH, hxt-charproperties, base < 5.0, containers

